cabal-version:       2.4

name:                isl-bindings-hl
version:             0.1.0.0
synopsis:            High-level interface to the Integer Set Library
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Gaël Deest
maintainer:          gael.deest@tweag.io
-- copyright:
category:            Math
extra-source-files:  CHANGELOG.md

library
  exposed-modules:   Isl.HighLevel,
                     Isl.HighLevel.BasicMap,
                     Isl.HighLevel.BasicSet,
                     Isl.HighLevel.Constraints,
                     Isl.HighLevel.Context,
                     Isl.HighLevel.Indices,
                     Isl.HighLevel.Map,
                     Isl.HighLevel.MultiAff,
                     Isl.HighLevel.Params,
                     Isl.HighLevel.Pure,
                     Isl.HighLevel.PwAff,
                     Isl.HighLevel.PwMultiAff,
                     Isl.HighLevel.Set,
                     Isl.HighLevel.UnionMap,
                     Isl.HighLevel.UnionSet,
                     Isl.HighLevel.Stencil,
                     Isl.HighLevel.Schedule,
                     Isl.HighLevel.Contraction,
                     Isl.HighLevel.FlowAnalysis
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12.0.0 && <5,
                       deepseq,
                       isl-bindings,
                       reflection

  hs-source-dirs:      src
  default-language:    Haskell2010
